--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -24,8 +24,9 @@ body {
 h1 {
     font-family: 'Abril Fatface', cursive;
     text-transform: uppercase;
-    font-size: 10rem;
+    font-size: 8rem;
     color: #fff;
+    letter-spacing: 10px;
 }
 
 a {
@@ -58,18 +59,15 @@ a {
 /* background image */
 
 .scroller {
-    overflow-y: scroll;
-    scroll-snap-type: y mandatory;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;  
 }
 
 .scroller section {
     width: 100%;
     height: 100rem;
-    scroll-snap-align: start;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
 }
 
 #home {
