--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -107,7 +107,7 @@ a {
 }
 
 .about-me-message {
-    width: 70%;
+    width: 60%;
     height: auto;
 }
 
@@ -118,9 +118,87 @@ a {
     margin: 2rem 0;
 }
 
-.booking {
+.yin-yoga-container {
     position: relative;
     top: 10rem;
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    
+    width: 100%;
+    height: 60%;
+    background: rgba(157, 157, 157, 0.4);
+}
+
+.yin-yoga-intro {
+    width: 60%;
+    height: 40%;
+    text-align: center;
+}
+
+h2 {
+    font-size: 2.5rem;
+    position: relative;
+    top: -5rem;
+}
+
+.yin-yoga-intro {
+    border: 1px solid rgba(157, 157, 157, 0.5);
+    overflow: scroll;
+    width: 60%;
+    height: 50%;
+    padding: 2.5rem;
+}
+
+.yin-yoga-intro::-webkit-scrollbar {
+    width: 1rem;
+}
+
+.yin-yoga-intro::-webkit-scrollbar-track {
+    border-radius: 5px;
+    box-shadow: rgba(157, 157, 157, 0.5);
+}
+
+.yin-yoga-intro::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    background-color: rgba(157, 157, 157, 0.5);
+}
+
+.yin-yoga-intro::-webkit-scrollbar-thumb:hover {
+    background-color: rgba(157, 157, 157, 0.6);
+}
+
+.yin-yoga-intro p {   
+    line-height: 3rem;
+    text-align: justify;
+    font-size: 2rem;
+    margin: 2rem 0;
+}
+
+.yin-yoga-intro div p {
+    text-align: center;
+}
+
+.yin-yoga-container div a {
+    position: relative;
+    top: 5rem;
+    font-size: 2rem;
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    height: 5rem;
+    width: 15rem;
+    border-radius: 5px;
+    background-color: #a88c76;
+}
+
+.booking {
+    position: relative;
+    top: 12rem;
     font-size: 2rem;
     
     display: flex;
