--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -23,43 +23,50 @@ body {
     font-weight: 400;
 }
 
-body .scroller {
+.scroller {
     width: 100%;
     height: 100%;
     scroll-snap-type: y mandatory;
     overflow-y: scroll;
 }
 
-body .scroller section {
+.scroller section {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     scroll-snap-align: start;
 }
 
 /* background images */
 #home {
-    background: url('../images/oksana-taran-GEjCwneU-YY-unsplash.jpg') no-repeat center center scroll;
+    background: url('../images/welcome-image-for-practicing-yoga-in-dark.jpg') no-repeat center center;
 }
 
 #yin-yoga {
-    background: url('../images/woman-1869463_1920.jpg') no-repeat center center scroll;
+    background: url('../images/yinyoga-section-image-practicing-yinga.jpg') no-repeat center center;
 }
 
 #about-me {
-    background: url('../images/StockSnap_373LUTBH99.jpg') no-repeat right center scroll;
+    background: url('../images/about-me-section-image-the-trainer.jpg') no-repeat center center;
     background-color: #0a0a0a;
 }
 
 #schedule {
-    background: url('../images/juan-miguel-agudo-dCd1l-xtaBA.jpg') no-repeat center center scroll;
+    background: url('../images/schedule-section-image-yoga-mat') no-repeat center center;
     background-color: #0a0a0a;
 }
 
 /* heading and logo */
+
+header {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
 #logo {
     font-family: 'Abril Fatface', cursive;
     text-transform: uppercase;
