--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -50,7 +50,7 @@ body {
 }
 
 #about-me {
-    background: url('../images/about-me-section-image-the-trainer.jpg') no-repeat center center;
+    background: url('../images/about-me-section-image-the-trainer.jpg') no-repeat right center;
     background-color: #0a0a0a;
 }
 
@@ -62,6 +62,8 @@ body {
 /* heading and logo */
 
 header {
+    width: 100%;
+    height: 15rem;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -84,14 +86,17 @@ a {
 
 /* navigation links */
 
+#nav-menu {
+  width: 60%;
+  position: absolute;
+  top: 20rem;
+}
+
 #nav-menu ul {
-    display: flex;
-    justify-content: space-between;
-    width: 50%;
     font-size: 2.5rem;
-    position: absolute;
-    top: 20rem;
-    right: 25%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 #nav-menu li {
