--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -63,7 +63,7 @@ body {
 
 header {
     width: 100%;
-    height: 15rem;
+    height: aoto;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -72,11 +72,11 @@ header {
 #logo {
     font-family: 'Abril Fatface', cursive;
     text-transform: uppercase;
-    font-size: 5rem;
+    font-size: 4rem;
     color: #fff;
     letter-spacing: 10px;
     position: absolute;
-    top: 3rem;
+    top: 4rem;
 }
 
 a {
@@ -87,9 +87,9 @@ a {
 /* navigation links */
 
 #nav-menu {
-  width: 60%;
+  width: 70%;
   position: absolute;
-  top: 20rem;
+  top: 17rem;
 }
 
 #nav-menu ul {
@@ -115,6 +115,8 @@ a {
 .welcome-message {
     font-size: 2rem;
     letter-spacing: 1px;
+    padding: 0 10rem;
+    text-align: center;
 }
 
 .about-me-message {
@@ -131,7 +133,7 @@ a {
 
 .yin-yoga-container {
     position: relative;
-    top: 10rem;
+    top: 6rem;
     
     display: flex;
     justify-content: center;
@@ -164,7 +166,7 @@ a {
 }
 
 .yin-yoga-message::-webkit-scrollbar {
-    width: 1rem;
+    width: -1rem;
 }
 
 .yin-yoga-message::-webkit-scrollbar-track {
@@ -209,7 +211,7 @@ a {
 
 .booking {
     position: relative;
-    top: 12rem;
+    top: 3rem;
     font-size: 2rem;
     
     display: flex;
@@ -278,6 +280,24 @@ footer {
 /* Media queries */
 /* For medium screen sizes from 950px wide and down */
 
-@media (max-width: 1200px) {
+@media (max-width: 992px) {
+    .about-me-message {
+        width: 80%;
+    }
+
+    .yin-yoga-message {
+        width: 80%;
+    }
+
+    .schedule-box {
+        top: 0rem;
+    }
+}
+
+@media (max-width: 600px) {
+    html {
+        font-size: 50%;
+    }
+
 
 }
