--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -294,10 +294,57 @@ footer {
     }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 768px) {
     html {
         font-size: 50%;
     }
 
+    #nav-menu ul {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
 
+    #nav-menu li {
+        padding: 1rem;
+    }
+
+    .yin-yoga-container {
+        height: 50%;
+    }
+
+    footer {
+        display: flex;
+        position: absolute;
+        bottom: 5rem;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    #design-by {
+        padding: 1rem 0;
+    }
+
+}
+
+@media (max-width: 550px) {
+    html {
+        font-size: 30%;
+    }
+
+    .yin-yoga-message p {
+        line-height: 3.5rem;
+    }
+
+    .schedule-box {
+        font-size: 1.5rem;
+        line-height: 3.5rem;
+        position: relative;
+        left: 46rem;
+    }
+
+    .submit-bottom {
+        left: 2rem;
+    }
 }
