--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -17,7 +17,7 @@ body {
     width: 100vw;
     height: 100vh;
     margin: 0;
-    background-color: #171212;
+    background-color: #010103;
     color: #fff;
     font-family: 'Open Sans', sans-serif;
     font-weight: 400;
@@ -28,6 +28,7 @@ body {
     height: 100%;
     scroll-snap-type: y mandatory;
     overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 .scroller section {
@@ -42,21 +43,23 @@ body {
 
 /* background images */
 #home {
-    background: url('../images/welcome-image-for-practicing-yoga-in-dark.jpg') no-repeat center center;
+    background: url('../images/main-image-women-practice-yoga.jpg') no-repeat center center;
+    background-color: #030406;
 }
 
 #yin-yoga {
-    background: url('../images/yinyoga-section-image-practicing-yinga.jpg') no-repeat center center;
+    background: url('../images/yin-yoga-image-practice.jpg') no-repeat center center;
+    background-color: #000000;
 }
 
 #about-me {
-    background: url('../images/about-me-section-image-the-trainer.jpg') no-repeat right center;
-    background-color: #0a0a0a;
+    background: url('../images/about-me-trainer-image.jpg') no-repeat right center;
+    background-color: #010103;
 }
 
 #schedule {
-    background: url('../images/schedule-section-image-yoga-mat') no-repeat center center;
-    background-color: #0a0a0a;
+    background: url('../images/schedule-image-book-class.jpg') no-repeat left center;
+    background-color: #07080a;
 }
 
 /* heading and logo */
@@ -120,7 +123,7 @@ a {
 }
 
 .about-me-message {
-    width: 60%;
+    width: 70%;
     height: auto;
 }
 
@@ -142,45 +145,21 @@ a {
     
     width: 100%;
     height: 60%;
-    background: rgba(157, 157, 157, 0.4);
-}
-
-.yin-yoga-message {
-    width: 60%;
-    height: 40%;
-    text-align: center;
+    background: rgba(85, 85, 85, 0.4);
 }
 
 .yin-yoga-container h2 {
     font-size: 2.5rem;
     position: relative;
-    top: -5rem;
+    top: -4rem;
 }
 
 .yin-yoga-message {
     border: 1px solid rgba(157, 157, 157, 0.5);
     overflow: scroll;
-    width: 60%;
+    width: 70%;
     height: 50%;
     padding: 2.5rem;
-}
-
-.yin-yoga-message::-webkit-scrollbar {
-    width: -1rem;
-}
-
-.yin-yoga-message::-webkit-scrollbar-track {
-    border-radius: 5px;
-    background-color: rgba(157, 157, 157, 0.5);
-}
-
-.yin-yoga-message::-webkit-scrollbar-thumb {
-    border-radius: 5px;
-    background-color: rgba(157, 157, 157, 0.5);
-}
-
-.yin-yoga-message::-webkit-scrollbar-thumb:hover {
-    background-color: rgba(157, 157, 157, 0.6);
 }
 
 .yin-yoga-message p {   
@@ -278,11 +257,17 @@ footer {
 }
 
 /* Media queries */
+
 /* For medium screen sizes from 950px wide and down */
 
-@media (max-width: 992px) {
+@media (max-width: 768px) {
+    html {
+        font-size: 60%;
+    }
+
     .about-me-message {
         width: 80%;
+        height: 45%;
     }
 
     .yin-yoga-message {
@@ -290,33 +275,13 @@ footer {
     }
 
     .schedule-box {
-        top: 0rem;
-    }
-}
-
-@media (max-width: 768px) {
-    html {
-        font-size: 50%;
-    }
-
-    #nav-menu ul {
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-
-    #nav-menu li {
-        padding: 1rem;
-    }
-
-    .yin-yoga-container {
-        height: 50%;
+        top: 0;
     }
 
     footer {
         display: flex;
         position: absolute;
-        bottom: 5rem;
+        bottom: 2rem;
         justify-content: center;
         align-items: center;
         flex-direction: column;
@@ -326,25 +291,4 @@ footer {
         padding: 1rem 0;
     }
 
-}
-
-@media (max-width: 550px) {
-    html {
-        font-size: 30%;
-    }
-
-    .yin-yoga-message p {
-        line-height: 3.5rem;
-    }
-
-    .schedule-box {
-        font-size: 1.5rem;
-        line-height: 3.5rem;
-        position: relative;
-        left: 46rem;
-    }
-
-    .submit-bottom {
-        left: 2rem;
-    }
 }
