--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -11,14 +11,12 @@
 html {
     font-size: 62.5%;
     scroll-behavior: smooth;
-    background-color: #000000;
 }
 
 body {
     width: 100vw;
     height: 100vh;
     margin: 0;
-    background-color: #010103;
     color: #fff;
     font-family: 'Open Sans', sans-serif;
     font-weight: 400;
@@ -27,13 +25,12 @@ body {
 
 header {
     width: 100%;
-    height: aoto;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
+    text-align: center;
+    position: fixed;
+    z-index: 999;
 }
 
-a {
+a { 
     text-decoration: none;
     color: #fff;
 }
@@ -46,6 +43,10 @@ footer {
     bottom: 5rem;
 }
 
+:root {
+    --background: rgba(0,0,0,1);
+}
+
 .scroller {
     width: 100%;
     height: 100%;
@@ -56,7 +57,6 @@ footer {
 
 .scroller section {
     display: flex;
-    justify-content: center;
     align-items: center;
     flex-direction: column;
     width: 100%;
@@ -65,282 +65,73 @@ footer {
 }
 
 /* background images */
-#home {
+.home {
     background: url('../images/main-image-women-practice-yoga.jpg') no-repeat center center;
 }
 
-#yin-yoga {
+.yin-yoga {
     background: url('../images/yin-yoga-image-practice.jpg') no-repeat center center;
 }
 
-#about-me {
+.about-me {
     background: url('../images/about-me-trainer-image.jpg') no-repeat right center;
 }
 
-#schedule {
+.schedule {
     background: url('../images/schedule-image-book-class.jpg') no-repeat left center;
 }
 
-/* heading and logo */
+/* logo */
 
-#logo {
+.logo {
     font-family: 'Abril Fatface', cursive;
     text-transform: uppercase;
-    font-size: 4rem;
-    color: #fff;
+    font-size: 6rem;
     letter-spacing: 10px;
+}
+
+/* nav */
+/* postion sidebar - reference w3c hover sidenav buttons */
+
+.my-sidebar-nav li {
+    list-style: none;
+}
+
+.my-sidebar-nav li i {
+    padding: 0 2rem;
+}
+
+.my-sidebar-nav a {
+    line-height: 3rem;
     position: absolute;
+    right: -11rem;
+    transition: 0.3s;
+    padding: 1rem;
+    width: 15rem;
+    border-radius: 5px;
+    text-align: justify;
+    top: 0;
+}
+
+/* style sidebar */
+
+.my-sidebar-nav a:hover {
+    right: 0;
+    background-color: rgba(168, 140, 118, .7);
+}
+
+#home {
+    top: 0;
+}
+
+#about-me {
     top: 4rem;
 }
 
-
-/* navigation links */
-
-.check-button {
-    font-size: 3rem;
-    cursor: pointer;
-    display: none;
+#yin-yoga {
+    top: 8rem;
 }
 
-#check {
-    display: none;
+#schedule {
+    top: 12rem;
 }
-
-#nav-menu {
-  width: 70%;
-  position: fixed;
-  top: 17rem;
-}
-
-#nav-menu ul {
-    font-size: 2.5rem;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
-#nav-menu li {
-    list-style-type: none;
-}
-
- #nav-menu a:hover {
-    font-size: 2.8rem;
-    color: #ffff;
-    opacity: 0.8;
-}
-
-/* message and booking for section 1,2,3 */
-
-.welcome-message {
-    font-size: 2rem;
-    letter-spacing: 1px;
-    padding: 0 10rem;
-    text-align: center;
-}
-
-.about-me-message {
-    width: 70%;
-    height: auto;
-}
-
-.about-me-message p {
-    line-height: 3rem;
-    text-align: justify;
-    font-size: 2rem;
-    margin: 2rem 0;
-}
-
-.yin-yoga-container {
-    position: relative;
-    top: 6rem;
-    
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    
-    width: 100%;
-    height: 60%;
-    background: rgba(85, 85, 85, 0.4);
-}
-
-.yin-yoga-container h2 {
-    font-size: 2.5rem;
-    position: relative;
-    top: -4rem;
-}
-
-.yin-yoga-message {
-    overflow: scroll;
-    width: 70%;
-    height: 50%;
-    padding: 2.5rem;
-}
-
-.yin-yoga-message p {   
-    line-height: 3rem;
-    text-align: justify;
-    font-size: 2rem;
-    margin: 2rem 0;
-}
-
-.yin-yoga-message div p {
-    text-align: center;
-}
-
-.booking {
-    position: relative;
-    top: 3rem;
-    font-size: 2rem;
-    
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    height: 5rem;
-    width: 15rem;
-    border-radius: 5px;
-    background-color: #a88c76;
-}
-
-.booking:hover, .submit-bottom:hover {
-    font-size: 2.2rem;
-    height: 6rem;
-    width: 16rem;
-    border-radius: 5px;
-    background-color: #a88c76;
-}
-
-/* section 4 - schedule */ 
-
-.schedule-box {
-    font-size: 2rem;
-    line-height: 3rem;
-    position: relative;
-    top: 7rem;
-    left: 34rem;
-}
-
-.schedule-box h2 {
-    font-size: 2.5rem; 
-    width: 100%;
-    position: relative;
-    right: 35rem;
-    bottom: -3rem;
-}
-
-.weekday{
-    width: 50%;
-}
-
-#time {
-    padding: 5px 20px;
-    font-size: 2rem;
-}
-
-.submit input {
-    padding: 5px 6rem;
-}
-
-#email {
-    padding: 5px 4.5rem;
-}
-
-.submit-bottom {
-    height: 5rem;
-    width: 15rem;
-    border-radius: 5px;
-    background-color: #a88c76;
-    position: relative;
-    left: -12rem;
-    top: 5rem;
-    font-size: 2rem;
-}
-
-/* footer */
-
-.social-networks li {
-    display: inline;
-    list-style-type: none;
-    font-size: 2rem;
-    padding: 2rem;
-}
-
-.social-networks li:hover {
-    font-size: 2.5rem;
-}
-
-.design-by {
-    font-size: 1.5rem;
-    letter-spacing: 1px;
-}
-
-.design-by:hover {
-    font-size: 1.7rem;
-}
-
-/* Media queries */
-
-@media (max-width: 600px) {
-    html {
-        font-size: 52%;
-    }
-
-    #nav-menu ul {
-        position: fixed;
-        width: 100%;
-        height: 100vh;
-        background: #010103;
-        text-align: center;
-        left: 0;
-        top: 0;
-        font-size: 2.5rem;
-        flex-direction: column;
-        line-height: 6rem;
-        justify-content: normal;
-    }
-
-    #nav-menu ul li a {
-        display: block;
-        width: 100%;
-    }
-
-    #nav-menu ul li a:hover {
-        background-color: rgba(85, 85, 85, 0.4);
-    }
-
-}
-
-@media (max-width: 768px) {
-    html {
-        font-size: 60%;
-    }
-
-    .about-me-message {
-        width: 80%;
-        height: 45%;
-    }
-
-    .yin-yoga-message {
-        width: 80%;
-    }
-
-    .schedule-box {
-        top: 0;
-    }
-
-    footer {
-        display: flex;
-        position: absolute;
-        bottom: 2rem;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-    }
-
-    .design-by {
-        padding: 1rem 0;
-    }
-
-}
-
