--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -141,6 +141,26 @@ a {
     text-align: justify;
 }
 
+.message-container {
+    position: relative;
+    top: 5rem;
+    width: 100%;
+    height: 60%;
+    background: rgba(85, 85, 85, 0.5);
+    overflow: scroll;
+}
+
+.message-container h2 {
+    text-align: center;
+    line-height: 7rem;
+}
+
+.message-container p {
+    padding: 1rem 4rem;
+    text-align: justify;
+    line-height: 2.5rem;
+}
+
 .booking {
     position: relative;
     width: 100%;
@@ -158,6 +178,10 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.btn-position {
+    top: 7rem;
 }
 
 /* footer */
@@ -181,7 +205,16 @@ footer {
 }
 
 .design-by {
+    width: 100%;
     font-size: 1rem;
     text-align: center;
-    padding: 1rem;
+    padding: 1rem 0;
+}
+
+/* media queries */
+
+@media screen and (max-width: 375px) {
+    .logo {
+        font-size: 5.5rem;
+    }
 }
