--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -144,6 +144,7 @@ a {
     height: 55%;
     background: rgba(85, 85, 85, 0.5);
     overflow: scroll;
+    z-index: 1;
 }
 
 .message-container h2 {
@@ -164,6 +165,7 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 2;
 }
 
 .booking a {
@@ -174,6 +176,7 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 2;
 }
 
 .btn-position {
@@ -219,6 +222,7 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
+
 }
 
 /* footer */
