--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -88,12 +88,13 @@ a {
 
 .my-sidebar-nav li i {
     padding: 0 2rem;
+    font-size: 2rem;
 }
 
 .my-sidebar-nav a {
     line-height: 3rem;
     position: absolute;
-    right: -11rem;
+    right: -10.5rem;
     transition: 0.3s;
     padding: 1rem;
     width: 15rem;
@@ -142,7 +143,6 @@ a {
     top: 5rem;
     width: 100%;
     height: 55%;
-    background: rgba(85, 85, 85, 0.5);
     overflow: scroll;
     z-index: 1;
 }
