--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -226,30 +226,47 @@ a {
 }
 
 /* footer */
+/* social network sidebar */
 
 footer {
-    display: block;
-    width: 80%;
     position: fixed;
     bottom: 1rem;
-}
-
-.social-networks {
+    width: 100%;
     display: flex;
     justify-content: center;
+    flex-direction: column;
 }
 
 .social-networks li {
     list-style: none;
-    display: inline;
+}
+
+.social-networks li span {
     padding: 0 2rem;
 }
 
-.design-by {
-    width: 100%;
-    font-size: 1rem;
-    text-align: center;
-    padding: 1rem 0;
+.social-networks li i {
+    font-size: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.social-networks a {
+    transition: 0.3s;
+    border-radius: 5px;
+
+    width: 2rem;
+    display: flex;
+    justify-content: flex-end;
+    text-align: right;
+    line-height: 4rem;
+    padding: 0 1rem;
+}
+
+.social-networks a:hover {
+    width: 12rem;
+    background-color: rgba(168, 140, 118, .7);
 }
 
 /* media queries */
@@ -263,6 +280,31 @@ footer {
     .schedule-box {
         width: 75%;
         margin: 0 auto;
+    }
+
+    footer {
+        display: block;
+        width: 80%;
+        position: fixed;
+        bottom: 1rem;
+    }
+    
+    .social-networks {
+        display: flex;
+        justify-content: center;
+    }
+    
+    .social-networks li {
+        list-style: none;
+        display: inline;
+        padding: 0 2rem;
+    }
+    
+    .design-by {
+        width: 100%;
+        font-size: 1rem;
+        text-align: center;
+        padding: 1rem 0;
     }
 
 }
