add website link to README and adjust padding for 1200px screen

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -398,5 +398,9 @@ footer {
     .schedule-box {
         width: 32%;
     }
+
+    .message-container p {
+        padding: 1rem 15rem;
+    }
     
 }
